# RG95-shapes-and-colors

./: CMakeLists.txt  README.md
src/: firstScene.hpp  main.cpp
src/shapes/: shapes.hpp
